--- a/app-bar/index.html
+++ b/app-bar/index.html
@@ -48,24 +48,34 @@
         <span class="title-black">уже ждут тебя!</span>
       </h2>
       <div class="slider__slider">
+          
         <div class="slider__item">
-          <div class="slider__item-hide">
+          <div class="slider__item-hide ">
             <div class="slider__item-hide-head">
-              <h6 class="slider__item-hide-title">Пирог с яблоком и ежевикой</h6>
-              <div class="close active"><img  src="img/x.svg" alt=""></div>
+              <h6 class="slider__item-hide-title">
+                Пирог с яблоком и ежевикой
+              </h6>
+              <div class="close"><img src="img/x.svg" alt="" /></div>
             </div>
             <p class="slider__item-hide-text text">
-              Предлагаем Вам отведать пирог с полезной ягодой брусникой
-              . Очень вкусный, начинки более чем достаточно. 
-              Применяется только свежая или свежезамороженная ягода.
+              Предлагаем Вам отведать пирог с полезной ягодой брусникой .
+              Очень вкусный, начинки более чем достаточно. Применяется только
+              свежая или свежезамороженная ягода.
             </p>
             <button class="slider__item-hide-btn">Заказать</button>
           </div>
           <div class="slider__item-inner">
-            <img src="img/pieq.png" alt="pie#1" class="slider__item-img">
+            <img src="img/pieq.png" alt="pie#1" class="slider__item-img" />
             <div class="slider__item-descr">
-              <h6 class="slider__item-descr-title">Пирог с яблоком и ежевикой</h6>
-              <span><img src="img/cart.svg" alt="" class="slider__item-descr-cart"></span>
+              <h6 class="slider__item-descr-title">
+                Пирог с яблоком и ежевикой
+              </h6>
+              <span
+                ><img
+                  src="img/cart.svg"
+                  alt=""
+                  class="slider__item-descr-cart"
+              /></span>
             </div>
             <div class="slider__item-prices">
               <p class="slider__item-prices-price">760р.</p>
@@ -76,21 +86,30 @@
         <div class="slider__item">
           <div class="slider__item-hide">
             <div class="slider__item-hide-head">
-              <h6 class="slider__item-hide-title">Пирог с брусникой и шоколадом</h6>
-              <div class="close"><img  src="img/x.svg" alt=""></div>
+              <h6 class="slider__item-hide-title">
+                Пирог с брусникой и шоколадом
+              </h6>
+              <div class="close"><img src="img/x.svg" alt="" /></div>
             </div>
             <p class="slider__item-hide-text text">
-              Предлагаем Вам отведать пирог с полезной ягодой брусникой
-              . Очень вкусный, начинки более чем достаточно. 
-              Применяется только свежая или свежезамороженная ягода.
+              Предлагаем Вам отведать пирог с полезной ягодой брусникой .
+              Очень вкусный, начинки более чем достаточно. Применяется только
+              свежая или свежезамороженная ягода.
             </p>
             <button class="slider__item-hide-btn">Заказать</button>
           </div>
           <div class="slider__item-inner">
-            <img src="img/pie2.png" alt="pie#1" class="slider__item-img">
+            <img src="img/pie2.png" alt="pie#1" class="slider__item-img" />
             <div class="slider__item-descr">
-              <h6 class="slider__item-descr-title">Пирог с брусникой и шоколадом</h6>
-              <span><img src="img/cart.svg" alt="" class="slider__item-descr-cart"></span>
+              <h6 class="slider__item-descr-title">
+                Пирог с брусникой и шоколадом
+              </h6>
+              <span
+                ><img
+                  src="img/cart.svg"
+                  alt=""
+                  class="slider__item-descr-cart"
+              /></span>
             </div>
             <div class="slider__item-prices">
               <p class="slider__item-prices-price">630р.</p>
@@ -102,73 +121,30 @@
           <div class="slider__item-hide">
             <div class="slider__item-hide-head">
               <h6 class="slider__item-hide-title">Пирог с лесными ягодами</h6>
-              <div class="close"><img  src="img/x.svg" alt=""></div>
+              <div class="close"><img src="img/x.svg" alt="" /></div>
             </div>
             <p class="slider__item-hide-text text">
-              Предлагаем Вам отведать пирог с полезной ягодой брусникой
-              . Очень вкусный, начинки более чем достаточно. 
-              Применяется только свежая или свежезамороженная ягода.
+              Предлагаем Вам отведать пирог с полезной ягодой брусникой .
+              Очень вкусный, начинки более чем достаточно. Применяется только
+              свежая или свежезамороженная ягода.
             </p>
             <button class="slider__item-hide-btn">Заказать</button>
           </div>
           <div class="slider__item-inner">
-            <img src="img/pie3.png" alt="pie#1" class="slider__item-img">
+            <img src="img/pie3.png" alt="pie#1" class="slider__item-img" />
             <div class="slider__item-descr">
-              <h6 class="slider__item-descr-title">Пирог с лесными ягодами</h6>
-              <span><img src="img/cart.svg" alt="" class="slider__item-descr-cart"></span>
+              <h6 class="slider__item-descr-title">
+                Пирог с лесными ягодами
+              </h6>
+              <span
+                ><img
+                  src="img/cart.svg"
+                  alt=""
+                  class="slider__item-descr-cart"
+              /></span>
             </div>
             <div class="slider__item-prices">
               <p class="slider__item-prices-price">920р.</p>
-              <p class="slider__item-prices-about">О товаре</p>
-            </div>
-          </div>
-        </div>
-        <div class="slider__item">
-          <div class="slider__item-hide">
-            <div class="slider__item-hide-head">
-              <h6 class="slider__item-hide-title">Пирог с яблоком и ежевикой</h6>
-              <div class="close"><img  src="img/x.svg" alt=""></div>
-            </div>
-            <p class="slider__item-hide-text text">
-              Предлагаем Вам отведать пирог с полезной ягодой брусникой
-              . Очень вкусный, начинки более чем достаточно. 
-              Применяется только свежая или свежезамороженная ягода.
-            </p>
-            <button class="slider__item-hide-btn">Заказать</button>
-          </div>
-          <div class="slider__item-inner">
-            <img src="img/pieq.png" alt="pie#1" class="slider__item-img">
-            <div class="slider__item-descr">
-              <h6 class="slider__item-descr-title">Пирог с яблоком и ежевикой</h6>
-              <span><img src="img/cart.svg" alt="" class="slider__item-descr-cart"></span>
-            </div>
-            <div class="slider__item-prices">
-              <p class="slider__item-prices-price">760р.</p>
-              <p class="slider__item-prices-about">О товаре</p>
-            </div>
-          </div>
-        </div>
-        <div class="slider__item">
-          <div class="slider__item-hide">
-            <div class="slider__item-hide-head">
-              <h6 class="slider__item-hide-title">Пирог с брусникой и шоколадом</h6>
-              <div class="close"><img  src="img/x.svg" alt=""></div>
-            </div>
-            <p class="slider__item-hide-text text">
-              Предлагаем Вам отведать пирог с полезной ягодой брусникой
-              . Очень вкусный, начинки более чем достаточно. 
-              Применяется только свежая или свежезамороженная ягода.
-            </p>
-            <button class="slider__item-hide-btn">Заказать</button>
-          </div>
-          <div class="slider__item-inner">
-            <img src="img/pie2.png" alt="pie#1" class="slider__item-img">
-            <div class="slider__item-descr">
-              <h6 class="slider__item-descr-title">Пирог с брусникой и шоколадом</h6>
-              <span><img src="img/cart.svg" alt="" class="slider__item-descr-cart"></span>
-            </div>
-            <div class="slider__item-prices">
-              <p class="slider__item-prices-price">630р.</p>
               <p class="slider__item-prices-about">О товаре</p>
             </div>
           </div>
@@ -177,20 +153,27 @@
           <div class="slider__item-hide">
             <div class="slider__item-hide-head">
               <h6 class="slider__item-hide-title">Пирог с лесными ягодами</h6>
-              <div class="close"><img  src="img/x.svg" alt=""></div>
+              <div class="close"><img src="img/x.svg" alt="" /></div>
             </div>
             <p class="slider__item-hide-text text">
-              Предлагаем Вам отведать пирог с полезной ягодой брусникой
-              . Очень вкусный, начинки более чем достаточно. 
-              Применяется только свежая или свежезамороженная ягода.
+              Предлагаем Вам отведать пирог с полезной ягодой брусникой .
+              Очень вкусный, начинки более чем достаточно. Применяется только
+              свежая или свежезамороженная ягода.
             </p>
             <button class="slider__item-hide-btn">Заказать</button>
           </div>
           <div class="slider__item-inner">
-            <img src="img/pie3.png" alt="pie#1" class="slider__item-img">
+            <img src="img/pie3.png" alt="pie#1" class="slider__item-img" />
             <div class="slider__item-descr">
-              <h6 class="slider__item-descr-title">Пирог с лесными ягодами</h6>
-              <span><img src="img/cart.svg" alt="" class="slider__item-descr-cart"></span>
+              <h6 class="slider__item-descr-title">
+                Пирог с лесными ягодами
+              </h6>
+              <span
+                ><img
+                  src="img/cart.svg"
+                  alt=""
+                  class="slider__item-descr-cart"
+              /></span>
             </div>
             <div class="slider__item-prices">
               <p class="slider__item-prices-price">920р.</p>
@@ -201,32 +184,67 @@
         <div class="slider__item">
           <div class="slider__item-hide">
             <div class="slider__item-hide-head">
-              <h6 class="slider__item-hide-title">Пирог с яблоком и ежевикой</h6>
-              <div class="close"><img  src="img/x.svg" alt=""></div>
+              <h6 class="slider__item-hide-title">Пирог с лесными ягодами</h6>
+              <div class="close"><img src="img/x.svg" alt="" /></div>
             </div>
             <p class="slider__item-hide-text text">
-              Предлагаем Вам отведать пирог с полезной ягодой брусникой
-              . Очень вкусный, начинки более чем достаточно. 
-              Применяется только свежая или свежезамороженная ягода.
+              Предлагаем Вам отведать пирог с полезной ягодой брусникой .
+              Очень вкусный, начинки более чем достаточно. Применяется только
+              свежая или свежезамороженная ягода.
             </p>
             <button class="slider__item-hide-btn">Заказать</button>
           </div>
           <div class="slider__item-inner">
-            <img src="img/pieq.png" alt="pie#1" class="slider__item-img">
+            <img src="img/pie3.png" alt="pie#1" class="slider__item-img" />
             <div class="slider__item-descr">
-              <h6 class="slider__item-descr-title">Пирог с яблоком и ежевикой</h6>
-              <span><img src="img/cart.svg" alt="" class="slider__item-descr-cart"></span>
+              <h6 class="slider__item-descr-title">
+                Пирог с лесными ягодами
+              </h6>
+              <span
+                ><img
+                  src="img/cart.svg"
+                  alt=""
+                  class="slider__item-descr-cart"
+              /></span>
             </div>
             <div class="slider__item-prices">
-              <p class="slider__item-prices-price">760р.</p>
+              <p class="slider__item-prices-price">920р.</p>
               <p class="slider__item-prices-about">О товаре</p>
             </div>
           </div>
         </div>
-        
-
-
-
+        <div class="slider__item">
+          <div class="slider__item-hide">
+            <div class="slider__item-hide-head">
+              <h6 class="slider__item-hide-title">Пирог с лесными ягодами</h6>
+              <div class="close"><img src="img/x.svg" alt="" /></div>
+            </div>
+            <p class="slider__item-hide-text text">
+              Предлагаем Вам отведать пирог с полезной ягодой брусникой .
+              Очень вкусный, начинки более чем достаточно. Применяется только
+              свежая или свежезамороженная ягода.
+            </p>
+            <button class="slider__item-hide-btn">Заказать</button>
+          </div>
+          <div class="slider__item-inner">
+            <img src="img/pie3.png" alt="pie#1" class="slider__item-img" />
+            <div class="slider__item-descr">
+              <h6 class="slider__item-descr-title">
+                Пирог с лесными ягодами
+              </h6>
+              <span
+                ><img
+                  src="img/cart.svg"
+                  alt=""
+                  class="slider__item-descr-cart"
+              /></span>
+            </div>
+            <div class="slider__item-prices">
+              <p class="slider__item-prices-price">920р.</p>
+              <p class="slider__item-prices-about">О товаре</p>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="head__btn">Заказать</div>
     </div>
